--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,13 @@ h2 {
   color: #333;
 }
 
+.form-item select {
+  width: 100%;
+  padding: 6px 8px;
+  border-radius: 6px;
+  border: 1px solid #bdbdbd;
+}
+
 .hint {
   display: block;
   font-size: 12px;
@@ -166,27 +173,4 @@ footer {
   font-size: 12px;
   color: #777;
   padding-bottom: 18px;
-}
-
-/* Ajustes Select2 */
-
-.select2-container .select2-selection--single {
-  height: 40px;
-  border-radius: 6px;
-  border-color: #bdbdbd;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__rendered {
-  line-height: 38px;
-  padding-left: 10px;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__arrow {
-  height: 38px;
-}
-
-.select2-container--default .select2-selection--single:focus,
-.select2-container--default.select2-container--open .select2-selection--single {
-  border-color: var(--verde-sedema);
-  outline: none;
 }
